--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^20.11.30",
     "prisma": "^5.16.1",
     "ts-node-dev": "^2.0.0",
